--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,5 @@
 .layout {
-  padding: 1.5rem;
-  min-height: 91vh;
-}
-
-.layout.sidesheet {
-  min-height: fit-content;
+  min-height: calc(100vh - 64px);
 }
 
 a:not([class]) {
